--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"he": "^1.2.0"
+		"compromise": "^14.14.0",
+		"he": "^1.2.0",
+		"pinyin-pro": "^3.25.0"
 	}
 }
